Mock WearPairingManager in test
Use the newly refactored constructors

Bug: 263164912
Test: this
Change-Id: I7592341a5aea894d2f3ed3498dca5d1cca21c4f5

GitOrigin-RevId: d55b85085ea678e3e77ac0199e7292f7659a0add