@@ -28,7 +28,7 @@ import com.android.tools.idea.wearpairing.WearPairingManager.PairingState;
 import com.android.tools.idea.wearpairing.WearPairingManager.PhoneWearPair;
 import com.intellij.ui.table.JBTable;
 import icons.StudioIcons;
-import java.util.Collections;
+import java.util.List;
 import javax.swing.JTable;
 import org.junit.Rule;
 import org.junit.Test;
@@ -41,12 +41,13 @@ public final class DeviceTableCellRendererTest {
   @Rule
   public FlagRule<Boolean> setWearPairingFlag = new FlagRule<>(StudioFlags.WEAR_OS_VIRTUAL_DEVICE_PAIRING_ASSISTANT_ENABLED, true);
 
+  private final WearPairingManager myManager = Mockito.mock(WearPairingManager.class);
   private final JTable myTable = new JBTable();
 
   @Test
   public void getTableCellRendererComponentDeviceIsOnline() {
     // Arrange
-    DeviceTableCellRenderer<Device> renderer = new DeviceTableCellRenderer<>(Device.class);
+    DeviceTableCellRenderer<Device> renderer = new DeviceTableCellRenderer<>(Device.class, myManager);
 
     // Act
     renderer.getTableCellRendererComponent(myTable, TestPhysicalDevices.ONLINE_GOOGLE_PIXEL_3, false, false, 0, 0);
@@ -70,10 +71,9 @@ public final class DeviceTableCellRendererTest {
     PhoneWearPair pair = new PhoneWearPair(phoneDevice, wearDevice);
     pair.setPairingStatus(PairingState.CONNECTED);
 
-    WearPairingManager manager = Mockito.mock(WearPairingManager.class);
-    Mockito.when(manager.getPairsForDevice("86UX00F4R")).thenReturn(Collections.singletonList(pair));
+    Mockito.when(myManager.getPairsForDevice("86UX00F4R")).thenReturn(List.of(pair));
 
-    DeviceTableCellRenderer<Device> renderer = new DeviceTableCellRenderer<>(Device.class, manager);
+    DeviceTableCellRenderer<Device> renderer = new DeviceTableCellRenderer<>(Device.class, myManager);
     assert renderer.getPairedLabel().getIcon() == null;
 
     // Act
@@ -96,10 +96,9 @@ public final class DeviceTableCellRendererTest {
     PhoneWearPair pair = new PhoneWearPair(phoneDevice, wearDevice);
     pair.setPairingStatus(PairingState.UNKNOWN);
 
-    WearPairingManager manager = Mockito.mock(WearPairingManager.class);
-    Mockito.when(manager.getPairsForDevice("86UX00F4R")).thenReturn(Collections.singletonList(pair));
+    Mockito.when(myManager.getPairsForDevice("86UX00F4R")).thenReturn(List.of(pair));
 
-    DeviceTableCellRenderer<Device> renderer = new DeviceTableCellRenderer<>(Device.class, manager);
+    DeviceTableCellRenderer<Device> renderer = new DeviceTableCellRenderer<>(Device.class, myManager);
     assert renderer.getPairedLabel().getIcon() == null;
 
     // Act
@@ -112,7 +111,7 @@ public final class DeviceTableCellRendererTest {
   @Test
   public void getTableCellRendererComponent() {
     // Arrange
-    DeviceTableCellRenderer<Device> renderer = new DeviceTableCellRenderer<>(Device.class);
+    DeviceTableCellRenderer<Device> renderer = new DeviceTableCellRenderer<>(Device.class, myManager);
 
     // Act
     renderer.getTableCellRendererComponent(myTable, TestPhysicalDevices.GOOGLE_PIXEL_3, false, false, 0, 0);
@@ -126,7 +125,7 @@ public final class DeviceTableCellRendererTest {
   @Test
   public void getForegroundSelected() {
     // Arrange
-    DeviceTableCellRenderer<Device> renderer = new DeviceTableCellRenderer<>(Device.class);
+    DeviceTableCellRenderer<Device> renderer = new DeviceTableCellRenderer<>(Device.class, myManager);
 
     // Act
     renderer.getTableCellRendererComponent(myTable, TestPhysicalDevices.GOOGLE_PIXEL_3, true, false, 0, 0);
@@ -138,7 +137,7 @@ public final class DeviceTableCellRendererTest {
   @Test
   public void getForeground() {
     // Arrange
-    DeviceTableCellRenderer<Device> renderer = new DeviceTableCellRenderer<>(Device.class);
+    DeviceTableCellRenderer<Device> renderer = new DeviceTableCellRenderer<>(Device.class, myManager);
 
     // Act
     renderer.getTableCellRendererComponent(myTable, TestPhysicalDevices.GOOGLE_PIXEL_3, false, false, 0, 0);
